--- a/lab-examples/srl02/srl02.clab.yml
+++ b/lab-examples/srl02/srl02.clab.yml
@@ -15,4 +15,6 @@ topology:
       kind: bridge
   links:
     - endpoints: ["srl1:e1-1", "srl2:e1-1"]
+    - endpoints: ["srl1:e1-2", "br1:e1-2"]
+    - endpoints: ["srl2:e1-2", "br1:e1-3"]
     
