--- a/lab-examples/srl02/srl1.cfg
+++ b/lab-examples/srl02/srl1.cfg
@@ -13,4 +13,5 @@ set / interface ethernet-1/2 subinterface 0 ipv4 admin-state enable
 set / interface ethernet-1/2 subinterface 0 ipv4 address 192.168.0.4/24
 
 set / network-instance default
-set / network-instance default interface ethernet-1/1.0
+set / network-instance default interface ethernet-1/2
+#set / network-instance default interface ethernet-1/1.0
